--- a/ClusterSurveillance/ClusterSurveillance.csproj
+++ b/ClusterSurveillance/ClusterSurveillance.csproj
@@ -38,8 +38,12 @@
     <Reference Include="DotNetProjects.SVGImage, Version=4.1.99.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetProjects.SVGImage.4.1.99\lib\net48\DotNetProjects.SVGImage.dll</HintPath>
     </Reference>
+    <Reference Include="Hardcodet.NotifyIcon.Wpf, Version=1.1.0.0, Culture=neutral, PublicKeyToken=682384a853a08aad, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hardcodet.NotifyIcon.Wpf.1.1.0\lib\net472\Hardcodet.NotifyIcon.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -194,6 +198,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\eclair.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PatiserieIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="PatiserieIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
