--- a/ClusterSurveillance/packages.config
+++ b/ClusterSurveillance/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetProjects.SVGImage" version="4.1.99" targetFramework="net48" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.1.0" targetFramework="net48" />
 </packages>
