--- a/ClusterSurveillance/packages.config
+++ b/ClusterSurveillance/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net48" />
   <package id="MQTTnet" version="3.1.2" targetFramework="net48" />
+  <package id="MQTTnet.Extensions.ManagedClient" version="3.1.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
