--- a/ClusterSurveillance/Appsettings/appsettings.json
+++ b/ClusterSurveillance/Appsettings/appsettings.json
@@ -3,7 +3,7 @@
   "sendUsageData": true,
   "showWeeklyTips": false,
   "ipAdress": "127.0.0.1",
-  "autoReconnectBroker": true,
+  "autoReconnectBroker": false,
   "port": 1883,
   "reconnectTime": 10,
   "autoCheckUpdates": false,
